--- a/src/app/partials/navbar/navbar.component.html
+++ b/src/app/partials/navbar/navbar.component.html
@@ -14,6 +14,12 @@
   <ng-template #elseBlock>
     <ul class="navbar-nav">
       <li class="nav-item">
+        <a class="nav-link" routerLink="/product/add">Add Product</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/product/list">List Products</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/">{{ authService.loggedUserName }}</a>
       </li>
       <li class="nav-item">
