--- a/src/app/partials/navbar/navbar.component.html
+++ b/src/app/partials/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" routerLink="/">Navbar</a>
+  <a class="navbar-brand" routerLink="/">Codelab</a>
 
-  <div *ngIf="!authService.logged; else elseBlock">
+  <div *ngIf="!authService.logged; else elseBlock" class="ml-auto">
     <ul class="navbar-nav">
       <li class="nav-item">
         <a class="nav-link" routerLink="/signup">Signup</a>
@@ -12,12 +12,9 @@
     </ul>
   </div>
   <ng-template #elseBlock>
-    <ul class="navbar-nav">
+    <ul class="navbar-nav ml-auto">
       <li class="nav-item">
         <a class="nav-link" routerLink="/product/add">Add Product</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/product/list">List Products</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/">{{ authService.loggedUserName }}</a>
